<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS 196</string>
    <string name="button_start">Start Game</string>
    <string name="button_new">New Game</string>
    <string name="new_game_description">Starts a new game. Any saved game will be deleted.</string>
    <string name="button_resume">Resume Game</string>
    <string name="resume_game_description">Resumes the game from the last save point.</string>
    <string name="select_one">Select</string>
    <string name="button_settings">Settings</string>
    <string name="button_menu">Exit</string>
    <string name="button_jump">Jump</string>
    <string name="text_difficulty">Difficulty:</string>
    <string name="text_score">Score:</string>
    <string name="game_score">Game score</string>
    <string name="game_difficulty">Game difficulty</string>
    <string name="button_high_scores">High Scores</string>
    <string name="button_credits">Credits</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_high_score_list">Highscore List</string>
    <string name="credits_page">Credits go to</string>
    <string name="high_score_one_name">High Score One Name</string>
    <string name="high_score_two_name">High Score Two Name</string>
    <string name="high_score_three_name">High Score Three Name</string>
    <string name="high_score_four_name">High Score Four Name</string>
    <string name="high_score_five_name">High Score Five Name</string>
    <string name="number_list_one">1)</string>
    <string name="number_list_two">2)</string>
    <string name="number_list_three">3)</string>
    <string name="number_list_four">4)</string>
    <string name="number_list_five">5)</string>
    <string name="high_score_one_score">High Score One Score</string>
    <string name="high_score_two_score">High Score Two Score</string>
    <string name="high_score_three_score">High Score Three Score</string>
    <string name="high_score_four_score">High Score Four Score</string>
    <string name="high_score_five_score">High Score Five Score</string>
    <string name="game_name">Game Name</string>
    <string name="title_activity_start_game_dialog_fragment">StartGameDialogFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_dialog_fragment">GameDialogFragment</string>
    <string name="title_activity_activity_dialog_fragment">ActivityDialogFragment</string>
    <string name="title_activity_dialog_fragment_one">DialogFragmentOne</string>
    <string name="title_activity_popup">Popup</string>
    <string name="title_activity_checking">Checking</string>
    <string name="title_activity_game_choice">GameChoiceActivity</string>

</resources> <!-- Find out how to make string inputs for the high score list -->


