<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".GameActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:background="@drawable/game_button_design"
        android:onClick="jump"
        android:text="@string/button_jump" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:background="@drawable/game_button_design"
        android:onClick="menu"
        android:text="@string/button_menu" />

    <SurfaceView
        android:id="@+id/surfaceView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="10dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignBottom="@+id/surfaceView1"
        android:layout_alignLeft="@+id/surfaceView1"
        android:background="@color/white"
        android:paddingTop="20dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/surfaceView1"
        android:layout_alignParentTop="true"
        android:textColor="@color/white"
        android:text="@string/text_difficulty" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:textColor="@color/white"
        android:paddingLeft="5dp"
        android:text="@string/game_difficulty" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/surfaceView1"
        android:textColor="@color/white"
        android:text="@string/game_score" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/surfaceView1"
        android:layout_toLeftOf="@+id/textView4"
        android:textColor="@color/white"
        android:paddingRight="5dp"
        android:text="@string/text_score" />

</RelativeLayout>